# stax

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  bugs.md
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: cache.rs  config.rs  git.rs  github.rs  lib.rs  logging.rs  main.rs  oauth.rs  stack.rs  token_store.rs  utils.rs
src/commands/: auth.rs  branch.rs  cache_refresh.rs  config.rs  delete.rs  include.rs  init.rs  insert.rs  log.rs  mod.rs  navigate.rs  repair.rs  restack.rs  stack.rs  status.rs  submit.rs  sync.rs
tests/: git_test.rs  include_test.rs  insert_test.rs  navigate_test.rs  repair_test.rs  restack_test.rs  stack_test.rs  token_store_test.rs
tests/common/: mod.rs
